add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,16 @@
-body {
-  margin: 0;
-}
+@import './utils/variables';
+@import './utils/mixins';
+@import './page';
+@import './header';
+@import './top-bar';
+@import './icon';
+@import './menu';
+@import './nav';
+@import './section-title';
+@import './main-section';
+@import './product';
+@import './compare-bikes';
+@import './about-us';
+@import './details';
+@import './contacts';
+@import './footer';
