--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -1,5 +1,5 @@
 @mixin on-tablet {
-  @media (min-width: 576px) {
+  @media (min-width: $tablet-min-width) {
     @content;
   }
 }
@@ -10,7 +10,7 @@
   }
 }
 
-@mixin content-padding-inline {
+@mixin content-padding-inline() {
   padding-inline: 20px;
 
   @include on-tablet {
@@ -24,12 +24,8 @@
   }
 }
 
-.container {
-  @include content-padding-inline;
-}
-
 @mixin hover($property, $toValue) {
-  transition: #{$property} 0.3s;
+  transition: #{$property} $effectDuration;
   &:hover {
     #{$property}: $toValue;
   }
@@ -39,8 +35,8 @@
   --columns: 2;
 
   display: grid;
-  grid-template-columns: repeat(var(--columns), 1fr);
   column-gap: 20px;
+  grid-template-columns: repeat(var(--columns), 1fr);
 
   @include on-tablet {
     --columns: 6;
